--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,7 @@
 FROM mcr.microsoft.com/devcontainers/python:3.10
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    NLTK_DATA=/workspaces/book-de/nltk_data \
-    HF_HOME=/workspaces/book-de/hf_home
-
-WORKDIR /workspaces/book-de
+    PYTHONUNBUFFERED=1  
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
@@ -18,6 +14,4 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-RUN mkdir -p $NLTK_DATA $HF_HOME && \
-    pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt 
+RUN pip install --no-cache-dir -r requirements.txt 
