Refactor logging to use OutputManager and enhance progress tracking in book_nllb.py; update dependencies in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "torch",
     "transformers",
     "beautifulsoup4",
-    "keybert"
+    "keybert",
+    "pyinstaller",
+    "tqdm"
 ]
-
-
